Finalizacion de Alcance Funcional y Roles y Niveles de Acceso. PENDIENTE HACER PRUEBA DE API de Integración